--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0071.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0071.html
@@ -121,9 +121,14 @@
             <ins class="alt" title="nlp 1.00">λογισμοὺς</ins>
           </span>
         </span>
-        <span id="w_20" class="ocr_word" title="bbox 402 452 666 520" lang="grc">
+        <span id="w_20_0" class="ocr_word" title="bbox 402 452 666 520">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">συγχέομαι’</ins>
+            <ins class="alt" title="nlp 2.00">συγχέομαι·</ins>
+          </span>
+        </span>
+        <span id="w_20_1" class="ocr_word" title="bbox 402 452 666 520">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 732 449 1071 518" lang="grc">
@@ -151,18 +156,8 @@
             <ins class="alt" title="nlp 1.00">τοῦτον</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 1700 453 1805 518" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διή-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 116 527 1808 599">
-        <span id="w_28" class="ocr_word" title="bbox 116 546 261 599" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γησιν</ins>
-          </span>
-        </span>
         <span id="w_29" class="ocr_word" title="bbox 297 528 612 595" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φυλάττουσα</ins>
@@ -269,7 +264,7 @@
         </span>
         <span id="w_49" class="ocr_word" title="bbox 119 684 186 746" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅς</ins>
+            <ins title="nlp 2.00">ὡς</ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 223 691 417 752" lang="grc">
@@ -848,16 +843,11 @@
         </span>
         <span id="w_160" class="ocr_word" title="bbox 1701 1614 1810 1665" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀτέ-</ins>
+            <ins title="nlp 2.00">ἀτέλεστα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 117 1692 1810 1759">
-        <span id="w_161" class="ocr_word" title="bbox 117 1697 258 1743" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λεστα</ins>
-          </span>
-        </span>
         <span id="w_162" class="ocr_word" title="bbox 295 1692 375 1742" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1340,9 +1330,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 122 2542 1877 2613">
-        <span id="w_256" class="ocr_word" title="bbox 356 2547 607 2611" lang="grc">
+        <span id="w_256_0" class="ocr_word" title="bbox 356 2547 607 2611">
           <span class="alternatives">
-            <ins title="nlp 2.00">ζόμενος</ins>
+            <ins class="alt" title="nlp 2.00">ὑπεκρίθη</ins>
+          </span>
+        </span>
+        <span id="w_256_1" class="ocr_word" title="bbox 356 2547 607 2611">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 654 2566 739 2596" lang="grc">
@@ -1378,11 +1373,6 @@
         <span id="w_263" class="ocr_word" title="bbox 1681 2542 1810 2609" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">‘Ρομπέρτον</ins>
-          </span>
-        </span>
-        <span id="w_264" class="ocr_word" title="bbox 1836 2567 1877 2600">
-          <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
