--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0053.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0053.html
@@ -766,12 +766,7 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1054 1554 1210 1586" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ᾤοντο</ins>
-          </span>
-        </span>
-        <span id="w_149" class="ocr_word" title="bbox 1226 1553 1238 1564">
-          <span class="alternatives">
-            <ins title="nlp 2.00">· </ins>
+            <ins class="alt" title="nlp 2.00">ᾤοντο· </ins>
           </span>
         </span>
         <span id="w_150" class="ocr_word" title="bbox 1275 1533 1483 1601" lang="grc">
@@ -1315,9 +1310,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 52 2543 1858 2613">
-        <span id="w_258" class="ocr_word" title="bbox 52 2559 80 2594">
+        <span id="w_258_0" class="ocr_word" title="bbox 52 2559 80 2594">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_258_1" class="ocr_word" title="bbox 52 2559 80 2594">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_259" class="ocr_word" title="bbox 104 2543 328 2610" lang="grc">
@@ -1358,11 +1358,6 @@
         <span id="w_266" class="ocr_word" title="bbox 1512 2544 1792 2611" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀνεφέρετο.</ins>
-          </span>
-        </span>
-        <span id="w_267" class="ocr_word" title="bbox 1816 2557 1858 2590">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30</ins>
           </span>
         </span>
       </span>
@@ -1414,9 +1409,14 @@
             <ins class="alt" title="nlp 1.00">ἅμα</ins>
           </span>
         </span>
-        <span id="w_277" class="ocr_word" title="bbox 241 2701 448 2767" lang="grc">
+        <span id="w_277_0" class="ocr_word" title="bbox 241 2701 448 2767">
           <span class="alternatives">
-            <ins title="nlp 2.00">πάντες ,</ins>
+            <ins class="alt" title="nlp 2.00">πάντες,</ins>
+          </span>
+        </span>
+        <span id="w_277_1" class="ocr_word" title="bbox 241 2701 448 2767">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 487 2699 608 2752" lang="grc">
@@ -1442,11 +1442,6 @@
         <span id="w_282" class="ocr_word" title="bbox 1503 2696 1626 2749" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατά</ins>
-          </span>
-        </span>
-        <span id="w_283" class="ocr_word" title="bbox 1654 2719 1791 2760" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τινας</ins>
           </span>
         </span>
       </span>
