--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0039.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0039.html
@@ -22,14 +22,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 42 1001 1847 1080">
-        <span id="w_2" class="ocr_word" title="bbox 42 1004 86 1080">
-          <span class="alternatives">
-            <ins title="nlp 2.00">P. 3 V. 7</ins>
-          </span>
-        </span>
         <span id="w_4" class="ocr_word" title="bbox 299 1010 339 1054">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1.</ins>
+            <ins title="nlp 2.00">V. P. 3 7 1.</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 376 1001 428 1054" lang="grc">
@@ -991,16 +986,11 @@
         </span>
         <span id="w_192" class="ocr_word" title="bbox 1518 2636 1843 2704" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνδραγαθη-</ins>
+            <ins title="nlp 2.00">ανδραγαθημάτων.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 152 2713 1843 2781">
-        <span id="w_193" class="ocr_word" title="bbox 152 2713 336 2778" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μάτων.</ins>
-          </span>
-        </span>
         <span id="w_194" class="ocr_word" title="bbox 396 2713 474 2763" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
