--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0072.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0072.html
@@ -32,9 +32,14 @@
             <ins class="alt" title="nlp 1.00">σκήπτρων</ins>
           </span>
         </span>
-        <span id="w_4" class="ocr_word" title="bbox 499 316 750 384" lang="grc">
+        <span id="w_4_0" class="ocr_word" title="bbox 499 316 750 384">
           <span class="alternatives">
-            <ins title="nlp 2.00">‘ρωμαίων</ins>
+            <ins class="alt" title="nlp 2.00">Ῥωμαίων</ins>
+          </span>
+        </span>
+        <span id="w_4_1" class="ocr_word" title="bbox 499 316 750 384">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 799 315 1149 382" lang="grc">
@@ -55,11 +60,6 @@
         <span id="w_8" class="ocr_word" title="bbox 1562 337 1670 367" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τινα</ins>
-          </span>
-        </span>
-        <span id="w_9" class="ocr_word" title="bbox 1709 318 1892 384" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χρόνον</ins>
           </span>
         </span>
       </span>
@@ -383,16 +383,11 @@
         </span>
         <span id="w_71" class="ocr_word" title="bbox 1759 877 1890 926" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰρη-</ins>
+            <ins title="nlp 2.00">εἰρημένος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 193 932 1893 1003">
-        <span id="w_72" class="ocr_word" title="bbox 193 938 337 1003" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένος</ins>
-          </span>
-        </span>
         <span id="w_73" class="ocr_word" title="bbox 391 953 605 1001" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μοναχὸς</ins>
@@ -875,24 +870,24 @@
         </span>
         <span id="w_168" class="ocr_word" title="bbox 1799 1706 1889 1760" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πό-</ins>
+            <ins title="nlp 2.00">πόλεμον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 131 1785 1960 1854">
-        <span id="w_169" class="ocr_word" title="bbox 196 1792 343 1853" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λεμον</ins>
-          </span>
-        </span>
         <span id="w_170" class="ocr_word" title="bbox 379 1807 501 1836" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
           </span>
         </span>
-        <span id="w_171" class="ocr_word" title="bbox 533 1785 786 1852" lang="grc">
+        <span id="w_171_0" class="ocr_word" title="bbox 533 1785 786 1852">
           <span class="alternatives">
-            <ins title="nlp 2.00">‘ρωμαίων</ins>
+            <ins class="alt" title="nlp 2.00">Ῥωμαίων</ins>
+          </span>
+        </span>
+        <span id="w_171_1" class="ocr_word" title="bbox 533 1785 786 1852">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_172" class="ocr_word" title="bbox 825 1787 1069 1849" lang="grc">
@@ -918,11 +913,6 @@
         <span id="w_176_0" class="ocr_word" title="bbox 1700 1789 1960 1853">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">διαρρεῖ</ins>
-          </span>
-        </span>
-        <span id="w_176_1" class="ocr_word" title="bbox 1700 1789 1960 1853">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">v.</ins>
           </span>
         </span>
       </span>
@@ -1150,19 +1140,19 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_224" class="ocr_word" title="bbox 1310 2171 1604 2241" lang="grc">
+        <span id="w_224_0" class="ocr_word" title="bbox 1310 2171 1604 2241">
           <span class="alternatives">
-            <ins title="nlp 2.00">‘ρομπέρτον</ins>
+            <ins class="alt" title="nlp 2.00">Ῥομπέρτον</ins>
+          </span>
+        </span>
+        <span id="w_224_1" class="ocr_word" title="bbox 1310 2171 1604 2241">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1640 2194 1761 2238" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
-          </span>
-        </span>
-        <span id="w_226" class="ocr_word" title="bbox 1801 2194 1892 2226" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
       </span>
@@ -1382,16 +1372,11 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1777 2583 1892 2613" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκω-</ins>
+            <ins title="nlp 2.00">ἐκωλύετο</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 200 2637 1892 2707">
-        <span id="w_271" class="ocr_word" title="bbox 200 2640 341 2689" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λύετο</ins>
-          </span>
-        </span>
         <span id="w_272" class="ocr_word" title="bbox 377 2658 467 2704" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὲν</ins>
