--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0054.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0054.html
@@ -472,9 +472,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_90" class="ocr_word" title="bbox 319 1075 527 1126" lang="grc">
+        <span id="w_90_0" class="ocr_word" title="bbox 319 1075 527 1126">
           <span class="alternatives">
-            <ins title="nlp 2.00">κούλεοῦ</ins>
+            <ins class="alt" title="nlp 2.00">κουλεοῦ</ins>
+          </span>
+        </span>
+        <span id="w_90_1" class="ocr_word" title="bbox 319 1075 527 1126">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_91" class="ocr_word" title="bbox 567 1094 618 1124" lang="grc">
@@ -505,11 +510,6 @@
         <span id="w_96" class="ocr_word" title="bbox 1561 1093 1644 1124" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_97" class="ocr_word" title="bbox 1673 1073 1880 1139" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δόρατος</ins>
           </span>
         </span>
       </span>
@@ -1359,7 +1359,7 @@
         </span>
         <span id="w_261" class="ocr_word" title="bbox 830 2622 950 2687" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἤδη</ins>
+            <ins title="nlp 2.00">(ἤδη</ins>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 988 2642 1079 2689" lang="grc">
