--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0029.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0029.html
@@ -381,15 +381,9 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_72" class="ocr_word" title="bbox 431 1084 470 1115">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
-          </span>
-        </span>
         <span id="w_73" class="ocr_word" title="bbox 513 1070 632 1128">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">131,</ins>
+            <ins title="nlp 2.00">11 131, </ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 670 1070 754 1117">
@@ -434,9 +428,14 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_82" class="ocr_word" title="bbox 1357 1159 1396 1189">
+        <span id="w_82_0" class="ocr_word" title="bbox 1357 1159 1396 1189">
           <span class="alternatives">
-            <ins title="nlp 2.00">π</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
+          </span>
+        </span>
+        <span id="w_82_1" class="ocr_word" title="bbox 1357 1159 1396 1189">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 1438 1144 1558 1206">
@@ -447,11 +446,6 @@
         <span id="w_84" class="ocr_word" title="bbox 1594 1145 1659 1192">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">29</ins>
-          </span>
-        </span>
-        <span id="w_85" class="ocr_word" title="bbox 1708 1162 1792 1207" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
       </span>
@@ -515,9 +509,14 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_97" class="ocr_word" title="bbox 398 1380 436 1411" lang="grc">
+        <span id="w_97_0" class="ocr_word" title="bbox 398 1380 436 1411">
           <span class="alternatives">
-            <ins title="nlp 2.00">Π</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
+          </span>
+        </span>
+        <span id="w_97_1" class="ocr_word" title="bbox 398 1380 436 1411">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 471 1366 590 1425">
@@ -558,11 +557,6 @@
         <span id="w_105" class="ocr_word" title="bbox 1584 1362 1667 1413" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_106" class="ocr_word" title="bbox 1705 1383 1791 1414" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
       </span>
@@ -1192,9 +1186,14 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_232" class="ocr_word" title="bbox 1268 2562 1286 2594">
+        <span id="w_232_0" class="ocr_word" title="bbox 1268 2562 1286 2594">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_232_1" class="ocr_word" title="bbox 1268 2562 1286 2594">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_233" class="ocr_word" title="bbox 1322 2549 1442 2609">
@@ -1210,11 +1209,6 @@
         <span id="w_235" class="ocr_word" title="bbox 1540 2541 1648 2610" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ᾔδει</ins>
-          </span>
-        </span>
-        <span id="w_236" class="ocr_word" title="bbox 1687 2565 1779 2612" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
