--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0073.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0073.html
@@ -840,16 +840,11 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 1622 1698 1799 1764" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δραξά-</ins>
+            <ins title="nlp 2.00">δραξάμενος.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 107 1774 1866 1844">
-        <span id="w_168" class="ocr_word" title="bbox 107 1794 270 1840" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενος.</ins>
-          </span>
-        </span>
         <span id="w_169" class="ocr_word" title="bbox 345 1777 669 1827" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συντίθενται</ins>
@@ -971,16 +966,11 @@
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1662 1949 1797 1996" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περι-</ins>
+            <ins title="nlp 2.00">περιτίθησιν,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 109 2005 1798 2075">
-        <span id="w_194" class="ocr_word" title="bbox 109 2009 326 2073" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τίθησιν,</ins>
-          </span>
-        </span>
         <span id="w_195" class="ocr_word" title="bbox 370 2005 434 2067" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
@@ -1253,7 +1243,7 @@
         </span>
         <span id="w_247" class="ocr_word" title="bbox 915 2417 1077 2465" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρὸς</ins>
+            <ins title="nlp 2.00">„πρὸς</ins>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 1103 2401 1284 2464" lang="grc">
@@ -1288,9 +1278,14 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_254" class="ocr_word" title="bbox 469 2470 756 2540" lang="grc">
+        <span id="w_254_0" class="ocr_word" title="bbox 469 2470 756 2540">
           <span class="alternatives">
-            <ins title="nlp 2.00">ῥομπέρτος</ins>
+            <ins class="alt" title="nlp 2.00">Ῥομπέρτος</ins>
+          </span>
+        </span>
+        <span id="w_254_1" class="ocr_word" title="bbox 469 2470 756 2540">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 795 2494 887 2539" lang="grc">
@@ -1321,11 +1316,6 @@
         <span id="w_260" class="ocr_word" title="bbox 1566 2494 1617 2525" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_261" class="ocr_word" title="bbox 1644 2475 1798 2539" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κῆδος</ins>
           </span>
         </span>
       </span>
@@ -1510,7 +1500,7 @@
         </span>
         <span id="w_296" class="ocr_word" title="bbox 239 2885 260 2914">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">8</ins>
+            <ins title="nlp 2.00">s</ins>
           </span>
         </span>
       </span>
