--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0040.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0040.html
@@ -94,9 +94,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 870 400 1142 463" lang="grc">
+        <span id="w_16_0" class="ocr_word" title="bbox 870 400 1142 463">
           <span class="alternatives">
-            <ins title="nlp 2.00">Οὑρσέλιον</ins>
+            <ins class="alt" title="nlp 2.00">Οὐρσέλιον</ins>
+          </span>
+        </span>
+        <span id="w_16_1" class="ocr_word" title="bbox 870 400 1142 463">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1186 397 1463 463" lang="grc">
@@ -112,11 +117,6 @@
         <span id="w_19" class="ocr_word" title="bbox 1639 418 1730 464" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὲν</ins>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 1765 419 1858 465" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
@@ -1162,9 +1162,14 @@
             <ins class="alt" title="nlp 2.00">τηνικαῦτα</ins>
           </span>
         </span>
-        <span id="w_224_1" class="ocr_word" title="bbox 663 2250 1212 2317">
+        <span id="w_224_1_0" class="ocr_word" title="bbox 663 2250 1212 2317">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">᾿Ρωμαίοις,</ins>
+            <ins class="alt" title="nlp 2.00">Ῥωμαίοις,</ins>
+          </span>
+        </span>
+        <span id="w_224_1_1" class="ocr_word" title="bbox 663 2250 1212 2317">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1271 2269 1355 2300" lang="grc">
@@ -1175,11 +1180,6 @@
         <span id="w_227" class="ocr_word" title="bbox 1386 2245 1642 2317" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βαρβάρου</ins>
-          </span>
-        </span>
-        <span id="w_228" class="ocr_word" title="bbox 1681 2254 1856 2303" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τούτου</ins>
           </span>
         </span>
       </span>
