--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0061.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0061.html
@@ -72,21 +72,26 @@
             <ins class="alt" title="nlp 1.00">Ἀλέξιος</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 1642 306 1832 354" lang="grc">
+        <span id="w_12_0" class="ocr_word" title="bbox 1642 306 1832 354">
           <span class="alternatives">
-            <ins title="nlp 2.00">προπηδήσας</ins>
+            <ins class="alt" title="nlp 2.00">προπη-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 27 361 1840 431">
-        <span id="w_13" class="ocr_word" title="bbox 27 386 59 419" lang="grc">
+        <span id="w_13_0" class="ocr_word" title="bbox 27 386 59 419">
           <span class="alternatives">
-            <ins title="nlp 2.00">ρ.</ins>
+            <ins class="alt" title="nlp 2.00">P.</ins>
+          </span>
+        </span>
+        <span id="w_13_1" class="ocr_word" title="bbox 27 386 59 419">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">20</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 82 386 122 417">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">20</ins>
+            <ins title="nlp 2.00">δήσας</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 340 386 424 430" lang="grc">
@@ -168,7 +173,7 @@
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1728 442 1835 510" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
       </span>
@@ -487,7 +492,7 @@
         </span>
         <span id="w_92" class="ocr_word" title="bbox 995 985 1099 1048" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1135 984 1227 1051" lang="grc">
@@ -1412,12 +1417,7 @@
         </span>
         <span id="w_271" class="ocr_word" title="bbox 331 2540 670 2606" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διελοιδορεῖτο</ins>
-          </span>
-        </span>
-        <span id="w_272" class="ocr_word" title="bbox 684 2579 697 2605">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">διελοιδορεῖτο,</ins>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 737 2559 814 2589" lang="grc">
