--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0055.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0055.html
@@ -185,12 +185,7 @@
         </span>
         <span id="w_34" class="ocr_word" title="bbox 815 530 1014 579" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπιόντα</ins>
-          </span>
-        </span>
-        <span id="w_35" class="ocr_word" title="bbox 1028 571 1041 595">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἐπιόντα,</ins>
           </span>
         </span>
         <span id="w_36" class="ocr_word" title="bbox 1080 527 1155 580" lang="grc">
@@ -329,9 +324,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 81 761 1823 831">
-        <span id="w_62" class="ocr_word" title="bbox 81 775 108 810">
+        <span id="w_62_0" class="ocr_word" title="bbox 81 775 108 810">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_62_1" class="ocr_word" title="bbox 81 775 108 810">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 133 783 220 831" lang="grc">
@@ -362,11 +362,6 @@
         <span id="w_68" class="ocr_word" title="bbox 1234 772 1461 830" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἡρωϊκῶς</ins>
-          </span>
-        </span>
-        <span id="w_69" class="ocr_word" title="bbox 1487 761 1823 830" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀνταγωνισάμενοι.</ins>
           </span>
         </span>
       </span>
@@ -433,9 +428,14 @@
             <ins class="alt" title="nlp 1.00">διώκειν</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 701 916 871 984" lang="grc">
+        <span id="w_84_0" class="ocr_word" title="bbox 701 916 871 984">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐγγὺς</ins>
+            <ins class="alt" title="nlp 2.00">(ἐγγὺς</ins>
+          </span>
+        </span>
+        <span id="w_84_1" class="ocr_word" title="bbox 701 916 871 984">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 910 938 1003 984" lang="grc">
@@ -456,11 +456,6 @@
         <span id="w_88" class="ocr_word" title="bbox 1272 915 1703 969" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀποπεπνευκέναι</ins>
-          </span>
-        </span>
-        <span id="w_89" class="ocr_word" title="bbox 1741 918 1824 968" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διὰ</ins>
           </span>
         </span>
       </span>
@@ -957,12 +952,7 @@
         </span>
         <span id="w_186" class="ocr_word" title="bbox 832 1772 993 1823" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νώτου</ins>
-          </span>
-        </span>
-        <span id="w_187" class="ocr_word" title="bbox 1005 1811 1019 1837">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">νώτου,</ins>
           </span>
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1068 1793 1094 1822" lang="grc">
@@ -1175,16 +1165,11 @@
         </span>
         <span id="w_230" class="ocr_word" title="bbox 1686 2080 1825 2133" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπεῖ-</ins>
+            <ins title="nlp 2.00">ἀπεῖπεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 130 2157 1892 2227">
-        <span id="w_231" class="ocr_word" title="bbox 130 2178 224 2210" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεν</ins>
-          </span>
-        </span>
         <span id="w_232" class="ocr_word" title="bbox 249 2179 274 2209" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
@@ -1403,9 +1388,9 @@
             <ins class="alt" title="nlp 1.00">ἑαυτοῦ</ins>
           </span>
         </span>
-        <span id="w_275" class="ocr_word" title="bbox 1636 2471 1827 2537" lang="grc">
+        <span id="w_275_0" class="ocr_word" title="bbox 1636 2471 1827 2537">
           <span class="alternatives">
-            <ins title="nlp 2.00">φάλαγγᾶς</ins>
+            <ins class="alt" title="nlp 2.00">φάλαγγας</ins>
           </span>
         </span>
       </span>
@@ -1573,17 +1558,17 @@
         </span>
         <span id="w_308" class="ocr_word" title="bbox 511 2815 874 2874">
           <span class="alternatives">
-            <ins title="nlp 2.00">Diesterwegius</ins>
+            <ins title="nlp 2.00">Diesterwegius:</ins>
           </span>
         </span>
-        <span id="w_309" class="ocr_word" title="bbox 885 2833 895 2859">
+        <span id="w_310_0" class="ocr_word" title="bbox 927 2819 1104 2872">
           <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">ἥλλατο</ins>
           </span>
         </span>
-        <span id="w_310" class="ocr_word" title="bbox 927 2819 1104 2872" lang="grc">
+        <span id="w_310_1" class="ocr_word" title="bbox 927 2819 1104 2872">
           <span class="alternatives">
-            <ins title="nlp 2.00">ῆλλατο</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_311" class="ocr_word" title="bbox 1135 2815 1214 2857">
@@ -1609,11 +1594,6 @@
         <span id="w_315" class="ocr_word" title="bbox 1576 2831 1648 2858" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοι</ins>
-          </span>
-        </span>
-        <span id="w_316" class="ocr_word" title="bbox 1678 2814 1714 2857">
-          <span class="alternatives">
-            <ins title="nlp 2.00">F</ins>
           </span>
         </span>
       </span>
