--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0062.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0062.html
@@ -160,12 +160,7 @@
       <span class="ocr_line" title="bbox 176 533 1871 611">
         <span id="w_28" class="ocr_word" title="bbox 176 545 406 611" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δρώμενα</ins>
-          </span>
-        </span>
-        <span id="w_29" class="ocr_word" title="bbox 423 562 432 572">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">δρώμενα·</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 474 562 529 593" lang="grc">
@@ -438,9 +433,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 1717 946 1871 993" lang="grc">
+        <span id="w_84_0" class="ocr_word" title="bbox 1717 946 1871 993">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρακελυόμενος</ins>
+            <ins class="alt" title="nlp 2.00">παρακελευόμενος</ins>
           </span>
         </span>
       </span>
@@ -546,7 +541,7 @@
         </span>
         <span id="w_105" class="ocr_word" title="bbox 549 1158 620 1210" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἕν’</ins>
+            <ins title="nlp 2.00">ἵν᾿</ins>
           </span>
         </span>
         <span id="w_106" class="ocr_word" title="bbox 664 1181 718 1210" lang="grc">
@@ -863,16 +858,11 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 1591 1624 1873 1691" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐφηδράσα-</ins>
+            <ins title="nlp 2.00">ἐφηδράσατο</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 184 1700 1930 1769">
-        <span id="w_168" class="ocr_word" title="bbox 184 1723 236 1753" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">το</ins>
-          </span>
-        </span>
         <span id="w_169" class="ocr_word" title="bbox 273 1723 359 1753" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1407,16 +1397,11 @@
         </span>
         <span id="w_273" class="ocr_word" title="bbox 1577 2555 1875 2621" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐξορμήσαν-</ins>
+            <ins title="nlp 2.00">ἐξορμήσαντες</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 189 2631 1878 2697">
-        <span id="w_274" class="ocr_word" title="bbox 189 2651 265 2691" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τες</ins>
-          </span>
-        </span>
         <span id="w_275" class="ocr_word" title="bbox 305 2631 572 2697" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐτρέψαντο</ins>
@@ -1449,16 +1434,11 @@
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1729 2646 1878 2697" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσ-</ins>
+            <ins title="nlp 2.00">προσῆγον.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 187 2705 1878 2775">
-        <span id="w_282" class="ocr_word" title="bbox 187 2716 329 2775" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ῆγον.</ins>
-          </span>
-        </span>
         <span id="w_283" class="ocr_word" title="bbox 407 2705 431 2757" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
