--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0075.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0075.html
@@ -111,16 +111,11 @@
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1645 371 1799 439" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀκμά-</ins>
+            <ins title="nlp 2.00">ἀκμάσαντα.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 113 447 1800 517">
-        <span id="w_19" class="ocr_word" title="bbox 113 466 284 499" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σαντα.</ins>
-          </span>
-        </span>
         <span id="w_20" class="ocr_word" title="bbox 347 447 377 513" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
@@ -1528,7 +1523,7 @@
         </span>
         <span id="w_295" class="ocr_word" title="bbox 1787 2824 1806 2852">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">8</ins>
+            <ins title="nlp 2.00">s</ins>
           </span>
         </span>
       </span>
