--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0033.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0033.html
@@ -747,7 +747,7 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 990 2186 1085 2250" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεῖ</ins>
+            <ins title="nlp 2.00">(δεῖ </ins>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 1118 2184 1211 2253" lang="grc">
