--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0056.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0056.html
@@ -700,9 +700,14 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_142" class="ocr_word" title="bbox 1128 1404 1287 1469" lang="grc">
+        <span id="w_142_0" class="ocr_word" title="bbox 1128 1404 1287 1469">
           <span class="alternatives">
-            <ins title="nlp 2.00">ζωήν ;</ins>
+            <ins class="alt" title="nlp 2.00">ζωήν;</ins>
+          </span>
+        </span>
+        <span id="w_142_1" class="ocr_word" title="bbox 1128 1404 1287 1469">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1334 1402 1444 1454" lang="grc">
@@ -718,11 +723,6 @@
         <span id="w_145" class="ocr_word" title="bbox 1674 1425 1737 1454" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_146" class="ocr_word" title="bbox 1787 1424 1871 1455" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
       </span>
@@ -814,9 +814,9 @@
             <ins class="alt" title="nlp 1.00">εἰ</ins>
           </span>
         </span>
-        <span id="w_164" class="ocr_word" title="bbox 1894 1572 1921 1607">
+        <span id="w_164_0" class="ocr_word" title="bbox 1894 1572 1921 1607">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -917,7 +917,7 @@
       <span class="ocr_line" title="bbox 112 1789 1867 1859">
         <span id="w_184" class="ocr_word" title="bbox 112 1798 403 1859">
           <span class="alternatives">
-            <ins title="nlp 2.00">20 χλοερᾶς, </ins>
+            <ins title="nlp 2.00">χλοερᾶς, </ins>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 456 1790 615 1842" lang="grc">
@@ -989,12 +989,7 @@
         </span>
         <span id="w_198" class="ocr_word" title="bbox 1391 1869 1634 1919" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκάθευδε</ins>
-          </span>
-        </span>
-        <span id="w_199" class="ocr_word" title="bbox 1648 1910 1660 1933">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἐκάθευδε,</ins>
           </span>
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1701 1869 1786 1921" lang="grc">
@@ -1026,12 +1021,7 @@
         </span>
         <span id="w_205" class="ocr_word" title="bbox 675 1964 832 2005" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὕπνος</ins>
-          </span>
-        </span>
-        <span id="w_206" class="ocr_word" title="bbox 845 1982 859 2010">
-          <span class="alternatives">
-            <ins title="nlp 2.00">, </ins>
+            <ins class="alt" title="nlp 2.00">ὕπνος, </ins>
           </span>
         </span>
         <span id="w_207" class="ocr_word" title="bbox 900 1953 1042 1994" lang="grc">
@@ -1120,12 +1110,7 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 506 2100 815 2164" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θεασάμενος</ins>
-          </span>
-        </span>
-        <span id="w_225" class="ocr_word" title="bbox 830 2139 843 2165">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">θεασάμενος,</ins>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 885 2098 989 2150" lang="grc">
@@ -1160,9 +1145,14 @@
             <ins class="alt" title="nlp 1.00">25</ins>
           </span>
         </span>
-        <span id="w_232" class="ocr_word" title="bbox 179 2177 329 2243" lang="grc">
+        <span id="w_232_0" class="ocr_word" title="bbox 179 2177 329 2243">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἑώρα ,</ins>
+            <ins class="alt" title="nlp 2.00">ἑώρα,</ins>
+          </span>
+        </span>
+        <span id="w_232_1" class="ocr_word" title="bbox 179 2177 329 2243">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_233" class="ocr_word" title="bbox 369 2174 767 2242" lang="grc">
@@ -1188,11 +1178,6 @@
         <span id="w_237" class="ocr_word" title="bbox 1368 2181 1643 2245" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κρείττονος</ins>
-          </span>
-        </span>
-        <span id="w_238" class="ocr_word" title="bbox 1680 2181 1866 2246" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γίνεται</ins>
           </span>
         </span>
       </span>
