--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0076.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0076.html
@@ -279,16 +279,11 @@
         </span>
         <span id="w_54" class="ocr_word" title="bbox 1773 687 1906 739" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἁπά-</ins>
+            <ins title="nlp 2.00">ἁπάσας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 218 767 1908 833">
-        <span id="w_55" class="ocr_word" title="bbox 218 784 308 830" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σας</ins>
-          </span>
-        </span>
         <span id="w_56" class="ocr_word" title="bbox 345 788 445 819" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπὸ</ins>
@@ -1521,9 +1516,14 @@
             <ins class="alt" title="nlp 1.00">8</ins>
           </span>
         </span>
-        <span id="w_300" class="ocr_word" title="bbox 832 2830 985 2863">
+        <span id="w_300_0" class="ocr_word" title="bbox 832 2830 985 2863">
           <span class="alternatives">
-            <ins title="nlp 2.00">*οῦσα</ins>
+            <ins class="alt" title="nlp 2.00">*οῦσα</ins>
+          </span>
+        </span>
+        <span id="w_300_1" class="ocr_word" title="bbox 832 2830 985 2863">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_301" class="ocr_word" title="bbox 1012 2818 1067 2862">
@@ -1551,11 +1551,6 @@
             <ins class="alt" title="nlp 1.00">13</ins>
           </span>
         </span>
-        <span id="w_306" class="ocr_word" title="bbox 1706 2817 1903 2874" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπειδὴ]</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 216 2872 1024 2930">
         <span id="w_307" class="ocr_word" title="bbox 216 2875 414 2929" lang="grc">
@@ -1575,7 +1570,7 @@
         </span>
         <span id="w_310" class="ocr_word" title="bbox 965 2878 1024 2929">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(8)</ins>
+            <ins title="nlp 2.00">(s)</ins>
           </span>
         </span>
       </span>
