--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0081.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0081.html
@@ -148,16 +148,11 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 1596 463 1802 528" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπεπόμ-</ins>
+            <ins title="nlp 2.00">ἐπεπόμφει</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 108 535 1801 607">
-        <span id="w_27" class="ocr_word" title="bbox 108 558 190 602" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φει</ins>
-          </span>
-        </span>
         <span id="w_28" class="ocr_word" title="bbox 226 549 438 603" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μέμψεις</ins>
@@ -1194,16 +1189,21 @@
             <ins class="alt" title="nlp 1.00">βασιλείων</ins>
           </span>
         </span>
-        <span id="w_231" class="ocr_word" title="bbox 1719 2332 1797 2384" lang="grc">
+        <span id="w_231_0" class="ocr_word" title="bbox 1719 2332 1797 2384">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐξήλασε</ins>
+            <ins class="alt" title="nlp 2.00">έξ-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 48 2398 1795 2469">
-        <span id="w_232" class="ocr_word" title="bbox 48 2415 80 2448">
+        <span id="w_232_0" class="ocr_word" title="bbox 48 2415 80 2448">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00">Β</ins>
+          </span>
+        </span>
+        <span id="w_232_1" class="ocr_word" title="bbox 48 2415 80 2448">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ήλασε</ins>
           </span>
         </span>
         <span id="w_234" class="ocr_word" title="bbox 272 2401 355 2451" lang="grc">
